# ML-Labs

./: .gitignore  1167-Lab10-BSCS_A_ClassTask.ipynb  1167-Lab2-BSCS-A_7.ipynb  1167-Lab3-BSCS_A_7.ipynb  1167-Lab3-BSCS_A_7_ClassTask.ipynb  1167-Lab4-BSCS-A_7_Activity.ipynb  1167-Lab4-BSCS_A.ipynb  1167-Lab5-BSCS_A_7_Activity.ipynb  1167-Lab5-BSCS_A_7_ClassTask.ipynb  1167-Lab6-BSCS_A_7_ClassTask.ipynb  1167-Lab8-9-BSCS_A_ClassTask.ipynb  ML_Lab1.pptx  ML_Lab2_3.pptx  ML_Lab4.pptx  ML_Lab7.pptx  ML_Lab_05.pptx  fast_lab_1.ipynb  fast_lab_2.ipynb  pyproject.toml  test.ipynb
Ensemble Report/: Ensemble_models.ipynb  EnsemblesReport.html  EnsemblesReport.ipynb
Lab10/: 1167-Lab10-BSCS_A_ClassTask.ipynb  simple_emotion_pipeline.ipynb
