[project]
name = "lab1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # Changed this line
dependencies = [
    "imblearn>=0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "ruff>=0.14.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.4.0,<2.5.0", # Use stable version
    "torchaudio>=2.4.0,<2.5.0",
    "torchvision>=0.19.0,<0.20.0",
]
