[project]
name = "ml-labs"
version = "0.1.0"
description = "Machine learning lab notebooks and exercises"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5,<7",
    "notebook>=7.3,<8",
    "numpy>=1.26.4,<2",
    "pandas>=2.2.3,<3",
    "scikit-learn>=1.5.2,<1.6",
    "matplotlib>=3.9.2,<3.10",
    "seaborn>=0.13.2,<0.14",
    "openpyxl>=3.1.5,<3.2",
    "python-dateutil>=2.9.0.post0,<3",
    "imbalanced-learn>=0.12.4,<0.13",
    "optuna>=4.1.0,<4.2",
    "keras-tuner>=1.4.7,<1.5",
    "tensorflow==2.17.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers>=4.46.3,<4.47",
    "ruff>=0.6.9,<0.7",
    "ipywidgets>=8.1.8",
    "huggingface-hub[hf-xet]>=0.36.0",
    "hf-xet>=1.2.0",
    "sentencepiece>=0.2.1",
    "sacremoses>=0.1.1",
    "diffusers>=0.36.0",
    "dotenv>=0.9.9",
]
